apps/miniserve/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: svenstaro/miniserve:0.22.0
          args:
            - -D
            - --route-prefix
            - /miniserve/
            - -t
            - starry.blue
            - /srv
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: files
              mountPath: /srv/files
              readOnly: true
            - name: mnt
              mountPath: /srv/mnt
              readOnly: true
      restartPolicy: Always
      volumes:
        - name: files
          hostPath:
            path: /opt/k8s-volumes/miniserve-files
            type: Directory
        - name: mnt
          hostPath:
            path: /mnt/records
            type: Directory
