apps/miniserve/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service

spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: default
